Omnibox UI: Fix a missing Invalidate call for async suggestion favicons

Bug report suggests that we are not refreshing the favicons correctly
when they are delivered asynchronously.

This reproduces sporadically, so this CL is a semi-speculative fix.
That being said - there is indeed a missing Invalidate call, so this CL
has a good chance of fixing the bug.

Bug: 856218
Change-Id: I8a3c83053d765769e4f6a71bffcd947afaa9566e
Reviewed-on: https://chromium-review.googlesource.com/1114154
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570192}