chrome/browser/ui/views/omnibox/omnibox_result_view.cc
@@ -184,7 +184,8 @@ OmniboxTint OmniboxResultView::GetTint() const {
 }
 
 void OmniboxResultView::OnMatchIconUpdated() {
-  // The new icon will be fetched during repaint.
+  // The new icon will be fetched during Invalidate().
+  Invalidate();
   SchedulePaint();
 }
 
